{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 49,
  "lineage": "62f86cac-9dde-fabe-1860-0c973579cf9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "doom-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:145504712931:internet-gateway/igw-0342088cd20f49fd4",
            "id": "igw-0342088cd20f49fd4",
            "owner_id": "145504712931",
            "tags": {
              "Name": "doom-igw"
            },
            "tags_all": {
              "Name": "doom-igw"
            },
            "vpc_id": "vpc-03493c9fd99164300"
          },
          "dependencies": [
            "aws_vpc.doom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "doom-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:145504712931:targetgroup/doom-alb/0e519003e15d35b6",
            "arn_suffix": "targetgroup/doom-alb/0e519003e15d35b6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:145504712931:targetgroup/doom-alb/0e519003e15d35b6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "doom-alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03493c9fd99164300"
          },
          "dependencies": [
            "aws_vpc.doom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "doom-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "doom-app-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-08240dc45aeed54ce",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f3350ecbf091f257",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "doom-app-rt"
            },
            "tags_all": {
              "Name": "doom-app-rt"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-03493c9fd99164300"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.doom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "doom-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:145504712931:route-table/rtb-0bfa0726096dd4db7",
            "id": "rtb-0bfa0726096dd4db7",
            "owner_id": "145504712931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0342088cd20f49fd4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "doom-pub-rt"
            },
            "tags_all": {
              "Name": "doom-pub-rt"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-03493c9fd99164300"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.doom-igw",
            "aws_vpc.doom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "doom-rds-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:145504712931:route-table/rtb-002745028b1d8962c",
            "id": "rtb-002745028b1d8962c",
            "owner_id": "145504712931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "doom-rds-rt"
            },
            "tags_all": {
              "Name": "doom-rds-rt"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-03493c9fd99164300"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.doom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "doom-app-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "doom-app-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "doom-pub-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "doom-pub-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "doom-rds-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "doom-rds-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "doom-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "doom-app-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025096776d17dc0d6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e8386f5269c238b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "acceso al balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0affa1509285b363c"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "ssh cloud 9",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035701687213b6227"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "doom-app-sg",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "doom-app-sg"
            },
            "tags_all": {
              "Name": "doom-app-sg"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-03493c9fd99164300"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.doom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "doom-cloud9-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:145504712931:security-group/sg-0a318edacb0df9876",
            "description": "doom-cloud9-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a318edacb0df9876",
            "ingress": [],
            "name": "doom-cloud9-sg",
            "name_prefix": "",
            "owner_id": "145504712931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "doom-cloud9-sg"
            },
            "tags_all": {
              "Name": "doom-cloud9-sg"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-03493c9fd99164300"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.doom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "doom-ingress-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:145504712931:security-group/sg-0918e59ce1ff2c4e0",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0918e59ce1ff2c4e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso irrestricto al puerto 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "doom-ingress-sg",
            "name_prefix": "",
            "owner_id": "145504712931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "doom-ingress-sg"
            },
            "tags_all": {
              "Name": "doom-ingress-sg"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-03493c9fd99164300"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.doom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "doom-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "doom-rds-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a561744abc8f98d4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035701687213b6227"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Acceso desde Cloud9 para conectarse y gestionar la base de datos",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e8386f5269c238b"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Acceso desde las MV de la capa de aplicacion a la base de datos",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7c7cd75a9e50541"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "doom-rds-sg",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "doom-rds-sg"
            },
            "tags_all": {
              "Name": "doom-rds-sg"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-03493c9fd99164300"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.doom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "doom-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:145504712931:vpc/vpc-03493c9fd99164300",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb8011ee66cf1018",
            "default_route_table_id": "rtb-032083cb610de309a",
            "default_security_group_id": "sg-0d155ce97cad2bd60",
            "dhcp_options_id": "dopt-0ba1dd34dd8a1e9c6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03493c9fd99164300",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032083cb610de309a",
            "owner_id": "145504712931",
            "tags": {
              "Name": "doom-vpc"
            },
            "tags_all": {
              "Name": "doom-vpc"
            }
          }
        }
      ]
    }
  ]
}